--- a/latihan2_11pplg2/pubspec.yaml
+++ b/latihan2_11pplg2/pubspec.yaml
@@ -61,6 +61,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/danis.png
+    - assets/bale.jpg
+    - assets/mbappe.jpg
+    - assets/mesii.jpg
+    - assets/nema.jpg
+    - assets/ronaldo.jpg
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
